refactor(#70): update service logic and add controller tests