@@ -32,9 +32,10 @@ import org.springframework.test.web.reactive.server.WebTestClient;
 
 import com.schemafy.core.common.constant.ApiPath;
 import com.schemafy.core.erd.controller.dto.response.AffectedMappingResponse;
-import com.schemafy.core.erd.repository.entity.Schema;
-import com.schemafy.core.erd.service.SchemaService;
+import com.schemafy.core.erd.repository.entity.Table;
+import com.schemafy.core.erd.service.TableService;
 
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import validation.Validation;
 
@@ -42,8 +43,8 @@ import validation.Validation;
 @SpringBootTest
 @AutoConfigureWebTestClient
 @AutoConfigureRestDocs
-@DisplayName("SchemaController 통합 테스트")
-class SchemaControllerTest {
+@DisplayName("TableController 통합 테스트")
+class TableControllerTest {
 
     private static final String API_BASE_PATH = ApiPath.AUTH_API
             .replace("{version}", "v1.0");
@@ -52,7 +53,7 @@ class SchemaControllerTest {
     private WebTestClient webTestClient;
 
     @MockitoBean
-    private SchemaService schemaService;
+    private TableService tableService;
 
     private String toJson(Message message) throws Exception {
         return JsonFormat.printer()
@@ -60,37 +61,50 @@ class SchemaControllerTest {
     }
 
     @Test
-    @DisplayName("스키마 생성 API 문서화")
-    void createSchema_success() throws Exception {
-        // given
-        Validation.CreateSchemaRequest request = Validation.CreateSchemaRequest
+    @DisplayName("테이블 생성 API 문서화")
+    void createTable() throws Exception {
+        // Given
+        Validation.CreateTableRequest request = Validation.CreateTableRequest
                 .newBuilder()
+                .setTable(Validation.Table.newBuilder()
+                        .setId("01ARZ3NDEKTSV4RRFFQ69G5FAV")
+                        .setSchemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                        .setName("users")
+                        .setComment("사용자 테이블")
+                        .setTableOptions("ENGINE=InnoDB DEFAULT CHARSET=utf8mb4")
+                        .build())
+                .setSchemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
                 .setDatabase(Validation.Database.newBuilder()
                         .setId("01ARZ3NDEKTSV4RRFFQ69G5FA0")
-                        .build())
-                .setSchema(validation.Validation.Schema.newBuilder()
-                        .setId("01ARZ3NDEKTSV4RRFFQ69G5FAV")
-                        .setProjectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
-                        .setDbVendorId(Validation.DbVendor.MYSQL)
-                        .setName("my_schema")
-                        .setCharset("utf8mb4")
-                        .setCollation("utf8mb4_unicode_ci")
+                        .addSchemas(Validation.Schema.newBuilder()
+                                .setId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                                .setProjectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
+                                .setDbVendorId(Validation.DbVendor.MYSQL)
+                                .setName("my_database")
+                                .setCharset("utf8mb4")
+                                .setCollation("utf8mb4_unicode_ci")
+                                .build())
                         .build())
                 .build();
+
         AffectedMappingResponse mockResponse = new AffectedMappingResponse(
-                Map.of("01ARZ3NDEKTSV4RRFFQ69G5FAV", "01ARZ3NDEKTSV4RRFFQ69G5FAW"), Collections.emptyMap(),
-                Collections.emptyMap(), Collections.emptyMap(),
-                Collections.emptyMap(), Collections.emptyMap(),
-                Collections.emptyMap(), Collections.emptyMap(),
+                Collections.emptyMap(),
+                Map.of("01ARZ3NDEKTSV4RRFFQ69G5FAV", "01ARZ3NDEKTSV4RRFFQ69G5FAX"),
+                Collections.emptyMap(),
+                Collections.emptyMap(),
+                Collections.emptyMap(),
+                Collections.emptyMap(),
+                Collections.emptyMap(),
+                Collections.emptyMap(),
                 Collections.emptyMap(),
                 AffectedMappingResponse.PropagatedEntities.empty());
-        given(schemaService
-                .createSchema(any(Validation.CreateSchemaRequest.class)))
-                        .willReturn(Mono.just(mockResponse));
 
-        // when & then
+        given(tableService.createTable(any()))
+                .willReturn(Mono.just(mockResponse));
+
+        // When & Then
         webTestClient.post()
-                .uri(API_BASE_PATH + "/schemas")
+                .uri(API_BASE_PATH + "/tables")
                 .contentType(MediaType.APPLICATION_JSON)
                 .bodyValue(toJson(request))
                 .header("Accept", "application/json")
@@ -98,8 +112,8 @@ class SchemaControllerTest {
                 .expectStatus().isOk()
                 .expectBody()
                 .jsonPath("$.success").isEqualTo(true)
-                .jsonPath("$.result.schemas.01ARZ3NDEKTSV4RRFFQ69G5FAV").isEqualTo("01ARZ3NDEKTSV4RRFFQ69G5FAW")
-                .consumeWith(document("schema-create",
+                .jsonPath("$.result.tables.01ARZ3NDEKTSV4RRFFQ69G5FAV").isEqualTo("01ARZ3NDEKTSV4RRFFQ69G5FAX")
+                .consumeWith(document("table-create",
                         requestHeaders(
                                 headerWithName("Content-Type")
                                         .description("요청 본문 타입 (application/json)"),
@@ -113,11 +127,11 @@ class SchemaControllerTest {
                                         .description("요청 성공 여부"),
                                 fieldWithPath("result").description("응답 데이터"),
                                 fieldWithPath("result.schemas")
-                                        .description("스키마 ID 매핑 (FE ID -> BE ID)"),
-                                fieldWithPath("result.schemas.01ARZ3NDEKTSV4RRFFQ69G5FAV")
-                                        .description("백엔드에서 생성된 스키마 ID"),
+                                        .description("스키마 ID 매핑"),
                                 fieldWithPath("result.tables")
-                                        .description("테이블 ID 매핑"),
+                                        .description("테이블 ID 매핑 (FE ID -> BE ID)"),
+                                fieldWithPath("result.tables.01ARZ3NDEKTSV4RRFFQ69G5FAV")
+                                        .description("백엔드에서 생성된 테이블 ID"),
                                 fieldWithPath("result.columns")
                                         .description("컬럼 ID 매핑"),
                                 fieldWithPath("result.indexes")
@@ -143,31 +157,45 @@ class SchemaControllerTest {
     }
 
     @Test
-    @DisplayName("스키마 단건 조회 API 문서화")
-    void getSchema_success_returns_ok() throws Exception {
-        String id = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
-        Schema found = Schema.builder()
-                .projectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
-                .dbVendorId("MYSQL")
-                .name("ecommerce_db")
-                .charset("utf8mb4")
-                .collation("utf8mb4_unicode_ci")
-                .vendorOption("ENGINE=InnoDB")
+    @DisplayName("스키마별 테이블 목록 조회 API 문서화")
+    void getTablesBySchemaId() throws Exception {
+        // Given
+        String schemaId = "01ARZ3NDEKTSV4RRFFQ69G5FAW";
+        
+        Table table1 = Table.builder()
+                .schemaId(schemaId)
+                .name("users")
+                .comment("사용자 테이블")
+                .tableOptions("ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci")
+                .extra("{}")
                 .build();
-        ReflectionTestUtils.setField(found, "id", id);
+        ReflectionTestUtils.setField(table1, "id", "01ARZ3NDEKTSV4RRFFQ69G5FAV");
+        
+        Table table2 = Table.builder()
+                .schemaId(schemaId)
+                .name("orders")
+                .comment("주문 테이블")
+                .tableOptions("ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci")
+                .extra("{}")
+                .build();
+        ReflectionTestUtils.setField(table2, "id", "01ARZ3NDEKTSV4RRFFQ69G5FAX");
 
-        given(schemaService.getSchema(id))
-                .willReturn(Mono.just(found));
+        given(tableService.getTablesBySchemaId(schemaId))
+                .willReturn(Flux.just(table1, table2));
 
+        // When & Then
         webTestClient.get()
-                .uri(API_BASE_PATH + "/schemas/{schemaId}", id)
+                .uri(API_BASE_PATH + "/tables/schema/{schemaId}", schemaId)
                 .header("Accept", "application/json")
                 .exchange()
                 .expectStatus().isOk()
                 .expectBody()
                 .jsonPath("$.success").isEqualTo(true)
-                .jsonPath("$.result.name").isEqualTo("ecommerce_db")
-                .consumeWith(document("schema-get",
+                .jsonPath("$.result").isArray()
+                .jsonPath("$.result.length()").isEqualTo(2)
+                .jsonPath("$.result[0].name").isEqualTo("users")
+                .jsonPath("$.result[1].name").isEqualTo("orders")
+                .consumeWith(document("table-list-by-schema",
                         pathParameters(
                                 parameterWithName("schemaId")
                                         .description("조회할 스키마의 ID")),
@@ -180,21 +208,80 @@ class SchemaControllerTest {
                         responseFields(
                                 fieldWithPath("success")
                                         .description("요청 성공 여부"),
-                                fieldWithPath("result").description("스키마 정보"),
-                                fieldWithPath("result.id")
+                                fieldWithPath("result")
+                                        .description("테이블 목록"),
+                                fieldWithPath("result[].id")
+                                        .description("테이블 ID"),
+                                fieldWithPath("result[].schemaId")
                                         .description("스키마 ID"),
-                                fieldWithPath("result.projectId")
-                                        .description("프로젝트 ID"),
-                                fieldWithPath("result.dbVendorId")
-                                        .description("데이터베이스 벤더 ID"),
+                                fieldWithPath("result[].name")
+                                        .description("테이블 이름"),
+                                fieldWithPath("result[].comment")
+                                        .description("테이블 설명"),
+                                fieldWithPath("result[].tableOptions")
+                                        .description("테이블 옵션"),
+                                fieldWithPath("result[].extra")
+                                        .description("추가 정보"),
+                                fieldWithPath("result[].createdAt")
+                                        .description("생성 일시"),
+                                fieldWithPath("result[].updatedAt")
+                                        .description("수정 일시"),
+                                fieldWithPath("result[].deletedAt")
+                                        .description("삭제 일시 (Soft Delete)"))));
+    }
+
+    @Test
+    @DisplayName("테이블 단건 조회 API 문서화")
+    void getTable() throws Exception {
+        // Given
+        String tableId = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
+        Table table = Table.builder()
+                .schemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                .name("users")
+                .comment("사용자 테이블")
+                .tableOptions("ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci")
+                .extra("생성일: 2024-01-01")
+                .build();
+        ReflectionTestUtils.setField(table, "id", tableId);
+
+        given(tableService.getTable(tableId))
+                .willReturn(Mono.just(table));
+
+        // When & Then
+        webTestClient.get()
+                .uri(API_BASE_PATH + "/tables/{tableId}", tableId)
+                .header("Accept", "application/json")
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody()
+                .jsonPath("$.success").isEqualTo(true)
+                .jsonPath("$.result.name").isEqualTo("users")
+                .consumeWith(document("table-get",
+                        pathParameters(
+                                parameterWithName("tableId")
+                                        .description("조회할 테이블의 ID")),
+                        requestHeaders(
+                                headerWithName("Accept")
+                                        .description("응답 포맷 (application/json)")),
+                        responseHeaders(
+                                headerWithName("Content-Type")
+                                        .description("응답 컨텐츠 타입")),
+                        responseFields(
+                                fieldWithPath("success")
+                                        .description("요청 성공 여부"),
+                                fieldWithPath("result").description("테이블 정보"),
+                                fieldWithPath("result.id")
+                                        .description("테이블 ID"),
+                                fieldWithPath("result.schemaId")
+                                        .description("스키마 ID"),
                                 fieldWithPath("result.name")
-                                        .description("스키마 이름"),
-                                fieldWithPath("result.charset")
-                                        .description("문자 집합"),
-                                fieldWithPath("result.collation")
-                                        .description("정렬 규칙"),
-                                fieldWithPath("result.vendorOption")
-                                        .description("벤더별 옵션"),
+                                        .description("테이블 이름"),
+                                fieldWithPath("result.comment")
+                                        .description("테이블 설명"),
+                                fieldWithPath("result.tableOptions")
+                                        .description("테이블 옵션"),
+                                fieldWithPath("result.extra")
+                                        .description("추가 정보"),
                                 fieldWithPath("result.createdAt")
                                         .description("생성 일시"),
                                 fieldWithPath("result.updatedAt")
@@ -204,40 +291,48 @@ class SchemaControllerTest {
     }
 
     @Test
-    @DisplayName("스키마 이름 변경 API 문서화")
-    void updateSchemaName_success_returns_ok() throws Exception {
-        String id = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
-        Validation.ChangeSchemaNameRequest request = Validation.ChangeSchemaNameRequest
+    @DisplayName("테이블 이름 변경 API 문서화")
+    void updateTableName() throws Exception {
+        // Given
+        String tableId = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
+        Validation.ChangeTableNameRequest request = Validation.ChangeTableNameRequest
                 .newBuilder()
                 .setDatabase(Validation.Database.newBuilder()
                         .setId("01ARZ3NDEKTSV4RRFFQ69G5FA0")
                         .addSchemas(Validation.Schema.newBuilder()
-                                .setId(id)
+                                .setId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
                                 .setProjectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
                                 .setDbVendorId(Validation.DbVendor.MYSQL)
-                                .setName("ecommerce_db")
+                                .setName("my_database")
                                 .setCharset("utf8mb4")
                                 .setCollation("utf8mb4_unicode_ci")
+                                .addTables(Validation.Table.newBuilder()
+                                        .setId(tableId)
+                                        .setSchemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                                        .setName("users")
+                                        .setComment("사용자 테이블")
+                                        .build())
                                 .build())
                         .build())
-                .setSchemaId(id)
-                .setNewName("ecommerce_production_db")
+                .setTableId(tableId)
+                .setNewName("members")
                 .build();
 
-        Schema updated = Schema.builder()
-                .projectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
-                .dbVendorId("MYSQL")
-                .name("ecommerce_production_db")
-                .charset("utf8mb4")
-                .collation("utf8mb4_unicode_ci")
+        Table updated = Table.builder()
+                .schemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                .name("members")
+                .comment("회원 테이블")
+                .tableOptions("ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci")
+                .extra("변경일: 2024-06-15")
                 .build();
-        ReflectionTestUtils.setField(updated, "id", id);
+        ReflectionTestUtils.setField(updated, "id", tableId);
 
-        given(schemaService.updateSchemaName(request))
+        given(tableService.updateTableName(request))
                 .willReturn(Mono.just(updated));
 
+        // When & Then
         webTestClient.put()
-                .uri(API_BASE_PATH + "/schemas/{schemaId}/name", id)
+                .uri(API_BASE_PATH + "/tables/{tableId}/name", tableId)
                 .contentType(MediaType.APPLICATION_JSON)
                 .bodyValue(toJson(request))
                 .header("Accept", "application/json")
@@ -245,11 +340,11 @@ class SchemaControllerTest {
                 .expectStatus().isOk()
                 .expectBody()
                 .jsonPath("$.success").isEqualTo(true)
-                .jsonPath("$.result.name").isEqualTo("ecommerce_production_db")
-                .consumeWith(document("schema-update-name",
+                .jsonPath("$.result.name").isEqualTo("members")
+                .consumeWith(document("table-update-name",
                         pathParameters(
-                                parameterWithName("schemaId")
-                                        .description("스키마 ID")),
+                                parameterWithName("tableId")
+                                        .description("테이블 ID")),
                         requestHeaders(
                                 headerWithName("Content-Type")
                                         .description("요청 본문 타입 (application/json)"),
@@ -261,21 +356,19 @@ class SchemaControllerTest {
                         responseFields(
                                 fieldWithPath("success")
                                         .description("요청 성공 여부"),
-                                fieldWithPath("result").description("수정된 스키마 정보"),
+                                fieldWithPath("result").description("수정된 테이블 정보"),
                                 fieldWithPath("result.id")
+                                        .description("테이블 ID"),
+                                fieldWithPath("result.schemaId")
                                         .description("스키마 ID"),
-                                fieldWithPath("result.projectId")
-                                        .description("프로젝트 ID"),
-                                fieldWithPath("result.dbVendorId")
-                                        .description("데이터베이스 벤더 ID"),
                                 fieldWithPath("result.name")
-                                        .description("변경된 스키마 이름"),
-                                fieldWithPath("result.charset")
-                                        .description("문자 집합"),
-                                fieldWithPath("result.collation")
-                                        .description("정렬 규칙"),
-                                fieldWithPath("result.vendorOption")
-                                        .description("벤더별 옵션"),
+                                        .description("변경된 테이블 이름"),
+                                fieldWithPath("result.comment")
+                                        .description("테이블 설명"),
+                                fieldWithPath("result.tableOptions")
+                                        .description("테이블 옵션"),
+                                fieldWithPath("result.extra")
+                                        .description("추가 정보"),
                                 fieldWithPath("result.createdAt")
                                         .description("생성 일시"),
                                 fieldWithPath("result.updatedAt")
@@ -285,50 +378,37 @@ class SchemaControllerTest {
     }
 
     @Test
-    @DisplayName("스키마 이름 변경: 경로와 바디의 schemaId 불일치 시 400")
-    void updateSchemaName_mismatch_returns_bad_request() throws Exception {
-        String pathId = "path-id";
-        Validation.ChangeSchemaNameRequest request = Validation.ChangeSchemaNameRequest
-                .newBuilder()
-                .setSchemaId("body-id")
-                .setNewName("new-name")
-                .build();
-
-        webTestClient.put()
-                .uri(API_BASE_PATH + "/schemas/{schemaId}/name", pathId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(toJson(request))
-                .exchange()
-                .expectStatus().isBadRequest()
-                .expectBody()
-                .jsonPath("$.success").isEqualTo(false);
-    }
-
-    @Test
-    @DisplayName("스키마 삭제 API 문서화")
-    void deleteSchema_success() throws Exception {
-        // given
-        String id = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
-        Validation.DeleteSchemaRequest request = Validation.DeleteSchemaRequest
+    @DisplayName("테이블 삭제 API 문서화")
+    void deleteTable() throws Exception {
+        // Given
+        String tableId = "01ARZ3NDEKTSV4RRFFQ69G5FAV";
+        Validation.DeleteTableRequest request = Validation.DeleteTableRequest
                 .newBuilder()
                 .setDatabase(Validation.Database.newBuilder()
                         .setId("01ARZ3NDEKTSV4RRFFQ69G5FA0")
                         .addSchemas(Validation.Schema.newBuilder()
-                                .setId(id)
+                                .setId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
                                 .setProjectId("01ARZ3NDEKTSV4RRFFQ69G5FA1")
                                 .setDbVendorId(Validation.DbVendor.MYSQL)
-                                .setName("old_unused_schema")
+                                .setName("my_database")
                                 .setCharset("utf8mb4")
                                 .setCollation("utf8mb4_unicode_ci")
+                                .addTables(Validation.Table.newBuilder()
+                                        .setId(tableId)
+                                        .setSchemaId("01ARZ3NDEKTSV4RRFFQ69G5FAW")
+                                        .setName("temp_table")
+                                        .setComment("임시 테이블")
+                                        .build())
                                 .build())
                         .build())
-                .setSchemaId(id)
+                .setTableId(tableId)
                 .build();
-        given(schemaService.deleteSchema(request)).willReturn(Mono.empty());
 
-        // when & then
+        given(tableService.deleteTable(request)).willReturn(Mono.empty());
+
+        // When & Then
         webTestClient.method(HttpMethod.DELETE)
-                .uri(API_BASE_PATH + "/schemas/{schemaId}", id)
+                .uri(API_BASE_PATH + "/tables/{tableId}", tableId)
                 .contentType(MediaType.APPLICATION_JSON)
                 .bodyValue(toJson(request))
                 .header("Accept", "application/json")
@@ -336,10 +416,10 @@ class SchemaControllerTest {
                 .expectStatus().isOk()
                 .expectBody()
                 .jsonPath("$.success").isEqualTo(true)
-                .consumeWith(document("schema-delete",
+                .consumeWith(document("table-delete",
                         pathParameters(
-                                parameterWithName("schemaId")
-                                        .description("삭제할 스키마의 ID")),
+                                parameterWithName("tableId")
+                                        .description("삭제할 테이블의 ID")),
                         requestHeaders(
                                 headerWithName("Content-Type")
                                         .description("요청 본문 타입 (application/json)"),
@@ -358,23 +438,5 @@ class SchemaControllerTest {
                                         .description("응답 데이터 (null)"))));
     }
 
-    @Test
-    @DisplayName("스키마 삭제: 경로와 바디의 schemaId 불일치 시 400")
-    void deleteSchema_mismatch_returns_bad_request() throws Exception {
-        String pathId = "path-id";
-        Validation.DeleteSchemaRequest request = Validation.DeleteSchemaRequest
-                .newBuilder()
-                .setSchemaId("body-id")
-                .build();
-
-        webTestClient.method(HttpMethod.DELETE)
-                .uri(API_BASE_PATH + "/schemas/{schemaId}", pathId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(toJson(request))
-                .exchange()
-                .expectStatus().isBadRequest()
-                .expectBody()
-                .jsonPath("$.success").isEqualTo(false);
-    }
-
 }
+
